aboutcardgapissue fixed

--- a/src/app/pages/calender/calender.component.css
+++ b/src/app/pages/calender/calender.component.css
@@ -146,3 +146,7 @@ border-radius: 5px;
 ::-webkit-scrollbar-thumb:hover{
 background: lightblue;
 }
+.aboutcard-spaceset{
+  display: flex;
+  flex: none !important;
+}
